--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
+.Age {
+  padding-top: 5%;
+}
+
+h1 {
+   padding: 2rem;
+}
+
+FORM {
+  width: 50%;
+  min-width: 10rem;
+  margin: auto;
+  text-align: center;
+}
+
+.PersonalId {
+  width: 30%;
+  margin: auto;
+}
+
+.form-label {
+  font-style: normal;
+  font-weight: bold;
+}
+
+.p-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%; 
+  height: 100%;
+  font-size: large;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +39,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
